      Reported by Julian Andres Klode <jak@debian.org>.
    - Add new import tags for Dpkg::Arch.
    - Abort on EOF in patch name prompt in Dpkg::Source::Package::V2,
      instead of getting into an infinite loop. Closes: #851441
    - Call anonymous subs via -> operator instead of casting with &, and fix
      bogus POD documentation to match the code.
  * Documentation:
    - Cleanup software requirements in README.
    - Move control member file references from dpkg(1) to deb(5).
    - Fix typos in docs and code comments.
  * Packaging:
    - Add debsig-verify to dpkg Suggests. The code optionally supports this
      specific signed .deb verification program.
      Prompted by Stuart Prescott <stuart@debian.org>.
  * Test suite:
    - Generate and check all currently possible architecture wildcards.

  [ Updated programs translations ]
  * German (Sven Joachim).

  [ Updated man pages translations ]
  * German (Helge Kreutzmann).

 -- Guillem Jover <guillem@debian.org>  Tue, 20 Dec 2016 14:30:31 +0100

dpkg (1.18.18) unstable; urgency=medium

  [ Guillem Jover ]
  * Documentation:
    - Document DPKG_DATADIR in an ENVIRONMENT section in dpkg-architecture(1).
    - Add a rationale for the purpose of Testsuite-Triggers in dsc(5).
      Prompted by Mattia Rizzolo <mattia@debian.org>.
  * Packaging:
    - Revert the perl to perl:any dependency change in libdpkg-perl, as that
      breaks debootstrap in stable (jessie), testing (stretch) and unstable,
      which do not support arch-qualified dependencies. We'll have to live
      with the Multi-Arch hinter being unhappy for now.

  [ Updated man pages translations ]
  * German (Helge Kreutzmann).

 -- Guillem Jover <guillem@debian.org>  Tue, 20 Dec 2016 13:53:12 +0100

dpkg (1.18.17) unstable; urgency=medium

  [ Guillem Jover ]
  * Handle empty versions on validation in dpkg-maintscript-helper as they
    are optional. Regression introduced in dpkg 1.18.16. Closes: #848422