@@ -323,6 +323,14 @@ this binary packages was built with (since dpkg 1.17.2 until 1.18.18).
 The information previously found in this field can now be found in the
 \fB.buildinfo\fP file, which supersedes it.
 .
+.TP
+.BI Auto\-Built\-Package: " reason-list"
+This field specifies a whitespace separated list of reasons why this package
+was auto-generated.
+Binary packages marked with this field will not appear in the
+\fIdebian/control\fP master source control file.
+The only currently used reason is \fBdebug\-symbols\fP.
+.
 .SH EXAMPLE
 .\" .RS
 .nf
