@@ -17,10 +17,12 @@ dpkg (1.18.19) UNRELEASED; urgency=medium
       instead of getting into an infinite loop. Closes: #851441
     - Call anonymous subs via -> operator instead of casting with &, and fix
       bogus POD documentation to match the code.
+    - Add new Auto-Built-Package field to Dpkg::Control::Fields.
   * Documentation:
     - Cleanup software requirements in README.
     - Move control member file references from dpkg(1) to deb(5).
     - Fix typos in docs and code comments.
+    - Document Auto-Built-Package field in deb-control(5).
   * Packaging:
     - Add debsig-verify to dpkg Suggests. The code optionally supports this
       specific signed .deb verification program.
